# nanobot

./: .gitignore  .goreleaser.yml  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
.github/workflows/: deploy-install-script.yml  docker-build-and-push.yml  main-release.yaml  release.yaml
examples/: package-lock.json  package.json
examples/hello-world/: nanobot.yaml
examples/myresearch-agent/: README.md  langgraph.json  nanobot.yaml  pyproject.toml
examples/myresearch-agent/agent/: configuration.py  graph.py  mcp_server.py
examples/openai-computer-using-agent/: browsertool.py  nanobot.yaml  pyproject.toml
examples/research-bot/: manager.ts  nanobot.yaml  package-lock.json  package.json
examples/research-bot-flow/: nanobot.yaml
examples/research_bot/: manager.ts  nanobot.yaml
examples/utils/: index.ts
pkg/agents/: run.go  toolcall.go  types.go
pkg/chat/: chat.go  print.go
pkg/cli/: call.go  exec.go  root.go  run.go  targets.go  tools.go
pkg/cmd/: builder.go  signal_posix.go  signal_windows.go  signals.go
pkg/complete/: complete.go
pkg/config/: load.go  load_test.go  resolver.go  schema.go  schema.yaml
pkg/confirm/: confirm.go
pkg/envvar/: replace.go
pkg/expr/: eval.go  lookup.go
pkg/llm/: client.go  progress.go
pkg/log/: log.go  log_test.go
pkg/mcp/: client.go  httpclient.go  httpserver.go  message.go  runner.go  serversession.go  session.go  stdio.go  stdioserver.go  types.go
pkg/openai/: client.go
pkg/printer/: lineprefix.go
pkg/reverseproxy/: server.go  tlsclient.go
pkg/runtime/: runtime.go
scripts/: install.sh
(+29 files in other folders)
